
2014-September-7 Struan Robertson

	* MolecularComponents.cpp/.h, CollisionOperator.cpp/.h, Reaction classes
	and the addition of gWellProperties.h/.cpp: Moved well properties out to
	own set of files as	the template structure was causing build problems on 
	Linux.

	* Updated Linux64 baselines.

2014-September-7 Struan Robertson

	* MolecularComponents.cpp/.h, CollisionOperator.cpp/.h, System.cpp: Changes 
	to allow matrix construction to be done at the specified precision.

2014-September-6 Struan Robertson

	* ThermodynamicTable.cpp: Minor change to thermodynamic table presentation.

2014-September-3 Struan Robertson

	* MolecularComponents.cpp: Corrected the volume factor in translational 
	partition function to give agreement with entropy in JANAF tables.

2014-August-31 Struan Robertson

	* System.cpp: Altered chi-squared method to account for second order 
	stoichiometry factors.

	* QMRotor.cpp, ClassicalRotor.cpp: Corrected calculation of electronic 
	partition functions.

	* Reaction classes: Removed commented TestRateCoeffHeader() code.

2014-August-26 Chris Morley

	* src/MicroRate.cpp: added XML output for me:canonicalRateList (changed
	from me:CanonicalRateList). Units (names also edited) calculated from
	number of reactants and products. Replaces virtual TestRateCoeffHeader().
	Using the reverse rate requires the energy of even sink products to
	be completely specified, which needs consideration.

	* mesmer1.xsl: updated for above

	* src/ReactionManager.cpp, src/Reaction.h: add reaction type names to log
	file.

	* Update Win32 baselines

2014-August-25 Struan Robertson

	* SecondOrderAssocReaction.h/.cpp: Implementation of second order association 
	reactions added.

2014-August-24 Struan Robertson

	* SecondOrderAssocReaction.h/.cpp: New class added to support second order
	reactions.

	* DefinedSumOfStates.cpp: Altered to allow for a variable cellsixe.

	* All reaction class tidied. 

2014-August-19 Struan Robertson
